更新前四個小遊戲

--- a/pre/scss/_var.scss
+++ b/pre/scss/_var.scss
@@ -135,3 +135,12 @@ $colors: map-merge($colors, (gray-1: mix(white, color(gray), 80%),
 }
 
 // 用法：@include a-color(gray, primary-8);
+
+
+@mixin radius($pc: 30, $m: 15) {
+    border-radius: size($pc);
+
+    @include max-to(small-pad) {
+        border-radius: size($m);
+    }
+}
