--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -402,32 +402,6 @@ body {
   border-radius: 6.25rem;
   padding: 0.75rem;
 }
-#mainPage header .login button {
-  background-color: black;
-  border: 0.125rem solid transparent;
-}
-#mainPage header .login button:hover {
-  background-color: #1d1d1d;
-}
-#mainPage header .login button:focus {
-  border: 0.125rem solid #c4c4c4;
-}
-#mainPage header .login button[disabled] {
-  color: #757575;
-  background-color: #3a3a3a;
-}
-#mainPage #shop .product-list li .content button {
-  border: 0.0625rem solid white;
-  background-color: transparent;
-}
-#mainPage #shop .product-list li .content button:hover {
-  background-color: rgba(255, 255, 255, 0.15);
-}
-#mainPage #shop .product-list li .content button[disabled] {
-  border-color: #757575;
-  color: #757575;
-  background-color: transparent;
-}
 #mainPage .dropdown {
   position: relative;
 }
@@ -575,6 +549,11 @@ body {
   overflow: hidden;
   position: relative;
 }
+@media (max-width: 768px) {
+  #mainPage .card {
+    border-radius: 0.9375rem;
+  }
+}
 #mainPage .card::before {
   position: absolute;
   content: "";
@@ -592,7 +571,6 @@ body {
 }
 @media (max-width: 768px) {
   #mainPage .card {
-    border-radius: 0.9375rem;
     padding: 1rem;
   }
 }
@@ -1128,6 +1106,73 @@ body {
 #mainPage .carousel.dark .swiper-pagination-bullets .swiper-pagination-bullet.swiper-pagination-bullet-active {
   background-color: black;
 }
+#mainPage .loading {
+  background-color: #e9e9e9;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#mainPage .loading .loading-rotate {
+  width: 180px;
+  border: 10px solid #871B1F;
+  height: 180px;
+  border-radius: 100px;
+  margin: 20vh auto;
+  /*20vh 很有意思的单位，感兴趣就百度吧*/
+  position: relative;
+  animation: roate 3s infinite linear;
+}
+#mainPage .loading .loading-rotate::before {
+  content: "";
+  display: block;
+  width: 200px;
+  height: 100px;
+  position: absolute;
+  z-index: 3;
+  background-color: #3a3a3a;
+  top: -10px;
+  left: -10px;
+}
+#mainPage .loading .loading-rotate::after {
+  content: "";
+  display: block;
+  width: 100px;
+  height: 200px;
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  z-index: 2;
+  background-color: #3a3a3a;
+}
+#mainPage .loading .loading-rotate img {
+  animation: flip 2s infinite both;
+}
+@keyframes roate {
+  0% {
+    transform: rotateZ(0);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+@keyframes flip {
+  0% {
+    transform: rotateY(0deg);
+  }
+  25% {
+    transform: rotateY(90deg);
+  }
+  50% {
+    transform: rotateY(180deg);
+  }
+  75% {
+    transform: rotateY(90deg);
+  }
+  100% {
+    transform: rotateY(0deg);
+  }
+}
 #mainPage #app {
   background-color: #871B1F;
 }
@@ -1287,8 +1332,20 @@ body {
   content: "\e907";
 }
 #mainPage header .login button {
+  background-color: black;
+  border: 0.125rem solid transparent;
   font-size: 0.9375rem;
   line-height: 1.5;
+}
+#mainPage header .login button:hover {
+  background-color: #1d1d1d;
+}
+#mainPage header .login button:focus {
+  border: 0.125rem solid #c4c4c4;
+}
+#mainPage header .login button[disabled] {
+  color: #757575;
+  background-color: #3a3a3a;
 }
 @media (max-width: 1280px) {
   #mainPage header .login button {
@@ -1666,6 +1723,11 @@ body {
 #mainPage #game-idx .swiper {
   border-radius: 1.875rem;
 }
+@media (max-width: 768px) {
+  #mainPage #game-idx .swiper {
+    border-radius: 0.9375rem;
+  }
+}
 #mainPage #game-idx .swiper-button-prev, #mainPage #game-idx .swiper-button-next {
   top: calc(100% + 2.5rem);
 }
@@ -1681,9 +1743,19 @@ body {
   cursor: pointer;
   position: relative;
 }
+@media (max-width: 768px) {
+  #mainPage #game-idx .swiper-slide {
+    border-radius: 0.9375rem;
+  }
+}
 #mainPage #game-idx .swiper-slide img {
   border-radius: 1.875rem;
   margin-bottom: -0.5rem;
+}
+@media (max-width: 768px) {
+  #mainPage #game-idx .swiper-slide img {
+    border-radius: 0.9375rem;
+  }
 }
 #mainPage #game-idx .swiper-slide .hover {
   position: absolute;
@@ -1787,7 +1859,7 @@ body {
     margin-bottom: 5.75rem;
   }
   #mainPage #game-idx .swiper {
-    border-radius: 1.875rem 1.875rem 0 0;
+    border-radius: 0.9375rem 0.9375rem 0 0;
   }
 }
 @media (max-width: 516px) {
@@ -1827,6 +1899,11 @@ body {
   background-position: center;
   position: relative;
   transform: scale(0.7) !important;
+}
+@media (max-width: 768px) {
+  #mainPage #nft-idx .carousel .swiper-slide {
+    border-radius: 0.9375rem;
+  }
 }
 #mainPage #nft-idx .carousel .swiper-slide .content {
   opacity: 0;
@@ -2029,6 +2106,11 @@ body {
   height: 28.75rem;
   position: relative;
 }
+@media (max-width: 768px) {
+  #mainPage #tutorial .content .tab-content {
+    border-radius: 0.9375rem;
+  }
+}
 #mainPage #tutorial .content .tab-content li {
   display: flex;
   flex-wrap: wrap;
@@ -2144,6 +2226,13 @@ body {
     border-radius: 1.875rem;
     height: 41.6666666667svw;
   }
+}
+@media (max-width: 1024px) and (max-width: 768px) {
+  #mainPage #tutorial .content .tab-content {
+    border-radius: 0.9375rem;
+  }
+}
+@media (max-width: 1024px) {
   #mainPage #tutorial .mask {
     right: 0;
     width: 10.5rem;
@@ -2293,12 +2382,22 @@ body {
   display: flex;
   gap: 2.5rem;
 }
+@media (max-width: 768px) {
+  #mainPage #shop .product-list li {
+    border-radius: 0.9375rem;
+  }
+}
 #mainPage #shop .product-list li .img {
   flex: 12.5rem;
   max-width: 12.5rem;
 }
 #mainPage #shop .product-list li .img img {
   border-radius: 1.875rem;
+}
+@media (max-width: 768px) {
+  #mainPage #shop .product-list li .img img {
+    border-radius: 0.9375rem;
+  }
 }
 #mainPage #shop .product-list li .content {
   flex: 1;
@@ -2320,7 +2419,17 @@ body {
   }
 }
 #mainPage #shop .product-list li .content button {
+  border: 0.0625rem solid white;
+  background-color: transparent;
   align-self: flex-end;
+}
+#mainPage #shop .product-list li .content button:hover {
+  background-color: rgba(255, 255, 255, 0.15);
+}
+#mainPage #shop .product-list li .content button[disabled] {
+  border-color: #757575;
+  color: #757575;
+  background-color: transparent;
 }
 #mainPage #shop .progress {
   width: 40.625rem;
@@ -2339,6 +2448,11 @@ body {
   border-radius: 1.875rem;
   background-color: #6c1619;
   color: #9d4043;
+}
+@media (max-width: 768px) {
+  #mainPage #shop .progress li {
+    border-radius: 0.9375rem;
+  }
 }
 #mainPage #shop .progress li span {
   word-break: keep-all;
@@ -2373,6 +2487,11 @@ body {
   border-radius: 1.875rem;
   background-color: rgba(255, 255, 255, 0.1);
   z-index: -1;
+}
+@media (max-width: 768px) {
+  #mainPage #shop .progress li::after {
+    border-radius: 0.9375rem;
+  }
 }
 #mainPage #shop .progress.step1 li:first-child {
   background-color: black;
@@ -2425,6 +2544,11 @@ body {
   flex-wrap: wrap;
   gap: 2.5rem;
 }
+@media (max-width: 768px) {
+  #mainPage #shop .product-detail {
+    border-radius: 0.9375rem;
+  }
+}
 #mainPage #shop .product-detail .title {
   flex: 100%;
   text-align: center;
@@ -2438,6 +2562,11 @@ body {
 #mainPage #shop .product-detail .img img {
   max-width: 19.6875rem;
   border-radius: 1.875rem;
+}
+@media (max-width: 768px) {
+  #mainPage #shop .product-detail .img img {
+    border-radius: 0.9375rem;
+  }
 }
 #mainPage #shop .product-detail .content {
   flex: 1;
@@ -2574,7 +2703,6 @@ body {
   }
   #mainPage #shop .product-list li .img img {
     max-width: 12.5rem;
-    border-radius: 0.9375rem;
   }
   #mainPage #shop .product-list li .content {
     gap: 1rem;
@@ -2635,7 +2763,6 @@ body {
   }
   #mainPage #shop .product-list li {
     padding: 2rem 1rem;
-    border-radius: 0.9375rem;
   }
   #mainPage #shop .progress {
     padding-top: 2rem;
@@ -2658,10 +2785,17 @@ body {
 #mainPage #game .game-list > li {
   flex: 25%;
   max-width: 25%;
-  padding: 1.75rem;
   border-radius: 1.875rem;
   overflow: hidden;
-  cursor: pointer;
+}
+@media (max-width: 768px) {
+  #mainPage #game .game-list > li {
+    border-radius: 0.9375rem;
+  }
+}
+#mainPage #game .game-list > li > a {
+  padding: 1.75rem;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -2669,31 +2803,41 @@ body {
   transition-property: background-color;
   transition-duration: 0.3s;
 }
-#mainPage #game .game-list > li .img {
+#mainPage #game .game-list > li > a .img {
   margin-bottom: 1.25rem;
   border-radius: 1.875rem;
   overflow: hidden;
 }
-#mainPage #game .game-list > li .img img {
+@media (max-width: 768px) {
+  #mainPage #game .game-list > li > a .img {
+    border-radius: 0.9375rem;
+  }
+}
+#mainPage #game .game-list > li > a .img img {
   margin-bottom: -0.1875rem;
   border-radius: 1.875rem;
   transition-property: transform;
   transition-duration: 0.3s;
 }
-#mainPage #game .game-list > li .tags {
+@media (max-width: 768px) {
+  #mainPage #game .game-list > li > a .img img {
+    border-radius: 0.9375rem;
+  }
+}
+#mainPage #game .game-list > li > a .tags {
   margin: 1rem 0 2.5rem;
 }
-#mainPage #game .game-list > li .btn {
+#mainPage #game .game-list > li > a .btn {
   flex-grow: 1;
   display: flex;
   align-items: flex-end;
 }
 @media (hover: hover) {
-  #mainPage #game .game-list > li:hover {
+  #mainPage #game .game-list > li > a:hover {
     background-color: black;
     transition-duration: 0.7s;
   }
-  #mainPage #game .game-list > li:hover .img img {
+  #mainPage #game .game-list > li > a:hover .img img {
     transform: scale(1.1);
   }
 }
@@ -2723,6 +2867,34 @@ body {
     line-height: 1.3;
   }
 }
+#mainPage #game .game-detail .content .input-group input[name=bets] {
+  border: 0.0625rem solid transparent;
+  transition-property: border-color;
+}
+#mainPage #game .game-detail .content .input-group input[name=bets].alert {
+  animation: alert 1s forwards;
+  border-color: #9d4043;
+}
+@keyframes alert {
+  0% {
+    border-color: transparent;
+  }
+  20% {
+    border-color: #9d4043;
+  }
+  40% {
+    border-color: transparent;
+  }
+  60% {
+    border-color: #9d4043;
+  }
+  80% {
+    border-color: transparent;
+  }
+  100% {
+    border-color: #9d4043;
+  }
+}
 #mainPage #game .game-detail .content .input-group > label,
 #mainPage #game .game-detail .content .input-group > input {
   flex-grow: 1;
@@ -2732,8 +2904,24 @@ body {
     flex: 33.33%;
     max-width: 33.33%;
   }
-  #mainPage #game .game-list > li:hover {
+  #mainPage #game .game-list > li > a {
+    padding: 0;
+  }
+  #mainPage #game .game-list > li > a:hover {
     background-color: transparent;
+  }
+  #mainPage #game .game-detail .card-content {
+    flex-wrap: wrap;
+  }
+  #mainPage #game .game-detail .card-content .game-zone {
+    flex: 100%;
+    max-width: 100%;
+  }
+  #mainPage #game .game-detail .card-content .content {
+    flex: 100%;
+  }
+  #mainPage #game .game-detail .card-content .content .desc {
+    order: 2;
   }
 }
 @media (max-width: 768px) {
@@ -2781,7 +2969,15 @@ body {
   background-position: center;
   position: relative;
 }
-#mainPage .game-zone .default {
+@media (max-width: 768px) {
+  #mainPage .game-zone {
+    border-radius: 0.9375rem;
+  }
+}
+#mainPage .game-zone .default img {
+  margin-bottom: -0.5rem;
+}
+#mainPage .game-zone .default .game-title {
   position: absolute;
   left: 0;
   right: 0;
@@ -2792,7 +2988,7 @@ body {
   align-items: center;
   justify-content: space-between;
 }
-#mainPage .game-zone .default::before {
+#mainPage .game-zone .default .game-title::before {
   content: "";
   position: absolute;
   left: 0;
@@ -2803,17 +2999,13 @@ body {
   z-index: -1;
 }
 #mainPage .game-zone .play-game {
+  margin-bottom: -0.5rem;
   display: none;
   opacity: 0;
   position: inherit;
   height: 100%;
 }
 #mainPage .game-zone .play-game video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   width: 100%;
   min-height: 100%;
   z-index: 0;
@@ -2850,7 +3042,7 @@ body {
   animation-name: float-3;
 }
 #mainPage .game-zone .play-game .game-content .result.dicing img {
-  animation-duration: 1s;
+  animation-duration: 0.5s;
 }
 #mainPage .game-zone .play-game .game-content .result.show img {
   animation-play-state: paused;
@@ -2873,6 +3065,8 @@ body {
   justify-content: center;
   gap: 1rem;
   padding: 0.5rem;
+  border-radius: 0.5rem;
+  overflow: hidden;
 }
 #mainPage .game-zone .play-game .game-content .selection div input {
   display: none;
@@ -2881,6 +3075,7 @@ body {
   cursor: not-allowed;
 }
 #mainPage .game-zone .play-game .game-content .selection div label {
+  position: relative;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -2890,9 +3085,22 @@ body {
   max-width: 100%;
   max-height: 100%;
 }
+#mainPage .game-zone .play-game .game-content .selection div label img.bg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  right: 0;
+  bottom: 0;
+  transform: translate(-50%, -50%);
+  filter: grayscale(100%);
+  z-index: -1;
+  transition-property: filter;
+}
+#mainPage .game-zone .play-game .game-content .selection div label img.item {
+  max-height: 3.5rem;
+  transition-property: transform;
+}
 #mainPage .game-zone .play-game .game-content .selection div.alert {
-  border-radius: 0.5rem;
-  overflow: hidden;
   animation: warning 1s forwards;
 }
 #mainPage .game-zone .play-game .game-content .selection button {
@@ -2902,7 +3110,7 @@ body {
 }
 #mainPage .game-zone .play-game .game-content .selection button img {
   max-width: 100%;
-  max-height: 100%;
+  max-height: 3.5rem;
 }
 #mainPage .game-zone .play-game::before {
   content: "";
@@ -2927,26 +3135,64 @@ body {
 #mainPage .game-zone .popUp .popUp--content {
   text-align: center;
 }
-#mainPage .game-zone.guess-the-number .game-content .selection div label {
-  background-image: url(../img/game/guess-the-number/btn-bg.png);
-  background-size: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
+#mainPage .game-zone.guess-the-number .play-game .game-content .selection div label, #mainPage .game-zone.higher-number-wins .play-game .game-content .selection div label {
   padding: 0 0.5rem;
-  filter: grayscale(100%);
 }
-#mainPage .game-zone.guess-the-number .game-content .selection div label img {
-  max-height: 3.5rem;
+#mainPage .game-zone.guess-the-number .play-game .game-content .selection div label img.bg, #mainPage .game-zone.higher-number-wins .play-game .game-content .selection div label img.bg {
+  filter: grayscale(100%);
+  transition-property: filter;
+}
+#mainPage .game-zone.guess-the-number .play-game .game-content .selection div label img.item, #mainPage .game-zone.higher-number-wins .play-game .game-content .selection div label img.item {
   transition-property: transform;
 }
-#mainPage .game-zone.guess-the-number .game-content .selection div input:checked + label {
+#mainPage .game-zone.guess-the-number .play-game .game-content .selection div input:checked + label img.bg, #mainPage .game-zone.higher-number-wins .play-game .game-content .selection div input:checked + label img.bg {
   filter: grayscale(0);
 }
-#mainPage .game-zone.guess-the-number .game-content .selection div input:checked + label img {
+#mainPage .game-zone.guess-the-number .play-game .game-content .selection div input:checked + label img.item, #mainPage .game-zone.higher-number-wins .play-game .game-content .selection div input:checked + label img.item {
   transform: scale(1.1);
 }
-#mainPage .game-zone.guess-the-number .game-content .selection button img {
+#mainPage .game-zone.guess-the-number .play-game .game-content .selection button img, #mainPage .game-zone.higher-number-wins .play-game .game-content .selection button img {
   max-height: 3.5rem;
+}
+#mainPage .game-zone.bet-big-small .play-game .game-content .selection div label img.bg, #mainPage .game-zone.odd-even-betting .play-game .game-content .selection div label img.bg {
+  opacity: 0.3;
+  transition-property: opacity;
+}
+#mainPage .game-zone.bet-big-small .play-game .game-content .selection div input:checked + label img.bg, #mainPage .game-zone.odd-even-betting .play-game .game-content .selection div input:checked + label img.bg {
+  opacity: 0.7;
+}
+@media (max-width: 1024px) {
+  #mainPage .game-zone .default .game-title {
+    padding: 1rem;
+  }
+  #mainPage .game-zone .default .game-title button {
+    padding: 0.59375rem 1.25rem;
+  }
+  #mainPage .game-zone .play-game .game-content .result {
+    transform: translate(0, -0.625rem);
+  }
+  #mainPage .game-zone .play-game .game-content .result img {
+    max-width: 15svw;
+  }
+  #mainPage .game-zone .play-game .game-content .selection {
+    padding: 0.75rem 0.5rem;
+  }
+  #mainPage .game-zone .play-game .game-content .selection div {
+    padding: 0.25rem;
+    border-radius: 0.25rem;
+  }
+  #mainPage .game-zone .popUp .popUp--container {
+    width: calc(100% - 2rem);
+  }
+  #mainPage .game-zone.guess-the-number .play-game .game-content .selection div, #mainPage .game-zone.higher-number-wins .play-game .game-content .selection div {
+    gap: 0.25rem;
+  }
+  #mainPage .game-zone.guess-the-number .play-game .game-content .selection div label, #mainPage .game-zone.higher-number-wins .play-game .game-content .selection div label {
+    padding: 0;
+  }
+  #mainPage .game-zone.guess-the-number .play-game .game-content .selection button, #mainPage .game-zone.higher-number-wins .play-game .game-content .selection button {
+    max-width: 5rem;
+  }
 }
 @keyframes fade-in {
   0% {
@@ -3009,6 +3255,18 @@ body {
     background-color: rgba(255, 255, 255, 0);
   }
 }
+#mainPage .full-page {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 8;
+}
+#mainPage .full-page.active {
+  display: block;
+}
 #mainPage #personal {
   padding: 0 3.75rem;
 }
@@ -3054,6 +3312,11 @@ body {
   background-color: rgba(0, 0, 0, 0.6);
   color: #bebebe;
   padding: 0;
+}
+@media (max-width: 768px) {
+  #mainPage #personal .license .carousel .swiper-slide .img .button {
+    border-radius: 0.9375rem;
+  }
 }
 @media (hover: hover) {
   #mainPage #personal .license .carousel .swiper-slide .img .button:hover {
@@ -3176,6 +3439,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+@media (max-width: 768px) {
+  #mainPage #personal .zkz .card-content .content .now,
+  #mainPage #personal .zkz .card-content .content .accumulation {
+    border-radius: 0.9375rem;
+  }
 }
 #mainPage #personal .zkz .card-content .content .now h6,
 #mainPage #personal .zkz .card-content .content .accumulation h6 {
