--- a/pre/scss/components/_card.scss
+++ b/pre/scss/components/_card.scss
@@ -1,5 +1,5 @@
 .card {
-    border-radius: size(30);
+    @include radius;
     background-color: black;
     padding: size(28);
     overflow: hidden;
@@ -25,7 +25,6 @@
 
     // small-pad ~ 768
     @include max-to(small-pad) {
-        border-radius: size(15);
         padding: size(16);
     }
 }
