小遊戲微調 & 增加 loading

--- a/pre/scss/components/_popUp.scss
+++ b/pre/scss/components/_popUp.scss
@@ -87,6 +87,7 @@
         flex-wrap: wrap;
         gap: size(16);
         color: white;
+        width: size(480);
 
         li {
             flex: 100%;
