--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -123,61 +123,6 @@ button {
   border: 0;
 }
 
-/* -- Animation.scss -- */
-@keyframes breath {
-  5% {
-    box-shadow: 0 0 20px transparent;
-  }
-  30% {
-    box-shadow: 0 0 20px rgba(146, 146, 146, 0.12);
-  }
-  70% {
-    box-shadow: 0 0 20px rgba(146, 146, 146, 0.12);
-  }
-  95% {
-    box-shadow: 0 0 20px transparent;
-  }
-}
-@keyframes breath-f {
-  5% {
-    box-shadow: 0 0 20px transparent;
-  }
-  20% {
-    box-shadow: 0 0 20px rgba(146, 146, 146, 0.12);
-  }
-  80% {
-    box-shadow: 0 0 20px rgba(146, 146, 146, 0.12);
-  }
-  95% {
-    box-shadow: 0 0 20px transparent;
-  }
-}
-@keyframes deco-round {
-  0% {
-    transform: rotate(0deg);
-    transform-origin: center;
-  }
-  100% {
-    transform: rotate(359deg);
-    transform-origin: center;
-  }
-}
-@keyframes scroll {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(calc(-100% - 2.75rem));
-  }
-}
-@keyframes rscroll {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(calc(100% + 2.75rem));
-  }
-}
 * {
   transition-duration: 0.2s;
   transition-property: none;
@@ -814,6 +759,7 @@ body {
   flex-wrap: wrap;
   gap: 1rem;
   color: white;
+  width: 30rem;
 }
 #mainPage #login ul li {
   flex: 100%;
@@ -1107,70 +1053,65 @@ body {
   background-color: black;
 }
 #mainPage .loading {
-  background-color: #e9e9e9;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 8;
+}
+#mainPage .loading-container .loading-rotate {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#mainPage .loading-container .loading-rotate .rotate {
+  background-image: url(../img/loading-bg.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  width: 6.5625rem;
+  height: 6.5625rem;
+}
+#mainPage .loading-container .loading-rotate .rotate svg {
+  fill: #871B1F;
+  animation: spin 1s infinite ease-in-out;
+}
+#mainPage .loading-container .loading-rotate img {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 3.9375rem;
 }
-#mainPage .loading .loading-rotate {
-  width: 180px;
-  border: 10px solid #871B1F;
-  height: 180px;
-  border-radius: 100px;
-  margin: 20vh auto;
-  /*20vh 很有意思的单位，感兴趣就百度吧*/
-  position: relative;
-  animation: roate 3s infinite linear;
+#mainPage .loading-container .loading-title {
+  font-size: 1.125rem;
+  line-height: 1.5;
+  text-align: center;
+  margin-top: 0.5rem;
 }
-#mainPage .loading .loading-rotate::before {
-  content: "";
-  display: block;
-  width: 200px;
-  height: 100px;
+@media (max-width: 1280px) {
+  #mainPage .loading-container .loading-title {
+    font-size: 0.9375rem;
+    line-height: 1.3;
+  }
+}
+#mainPage .loading.full {
+  position: fixed;
+}
+#mainPage .loading.section {
   position: absolute;
-  z-index: 3;
-  background-color: #3a3a3a;
-  top: -10px;
-  left: -10px;
 }
-#mainPage .loading .loading-rotate::after {
-  content: "";
-  display: block;
-  width: 100px;
-  height: 200px;
-  position: absolute;
-  top: -10px;
-  left: -10px;
-  z-index: 2;
-  background-color: #3a3a3a;
-}
-#mainPage .loading .loading-rotate img {
-  animation: flip 2s infinite both;
-}
-@keyframes roate {
+@keyframes spin {
   0% {
-    transform: rotateZ(0);
+    transform: rotate(0deg);
   }
   100% {
-    transform: rotateZ(360deg);
-  }
-}
-@keyframes flip {
-  0% {
-    transform: rotateY(0deg);
-  }
-  25% {
-    transform: rotateY(90deg);
-  }
-  50% {
-    transform: rotateY(180deg);
-  }
-  75% {
-    transform: rotateY(90deg);
-  }
-  100% {
-    transform: rotateY(0deg);
+    transform: rotate(360deg);
   }
 }
 #mainPage #app {
@@ -2871,30 +2812,6 @@ body {
   border: 0.0625rem solid transparent;
   transition-property: border-color;
 }
-#mainPage #game .game-detail .content .input-group input[name=bets].alert {
-  animation: alert 1s forwards;
-  border-color: #9d4043;
-}
-@keyframes alert {
-  0% {
-    border-color: transparent;
-  }
-  20% {
-    border-color: #9d4043;
-  }
-  40% {
-    border-color: transparent;
-  }
-  60% {
-    border-color: #9d4043;
-  }
-  80% {
-    border-color: transparent;
-  }
-  100% {
-    border-color: #9d4043;
-  }
-}
 #mainPage #game .game-detail .content .input-group > label,
 #mainPage #game .game-detail .content .input-group > input {
   flex-grow: 1;
@@ -3256,6 +3173,7 @@ body {
   }
 }
 #mainPage .full-page {
+  cursor: not-allowed;
   display: none;
   position: fixed;
   top: 0;
