--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -1059,43 +1059,43 @@ body {
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.8);
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   z-index: 8;
 }
-#mainPage .loading-container .loading-rotate {
-  position: relative;
+#mainPage .loading-container {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
 }
-#mainPage .loading-container .loading-rotate .rotate {
-  background-image: url(../img/loading-bg.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  width: 6.5625rem;
-  height: 6.5625rem;
+#mainPage .loading-spinner {
+  position: relative;
 }
-#mainPage .loading-container .loading-rotate .rotate svg {
-  fill: #871B1F;
-  animation: spin 1s infinite ease-in-out;
+#mainPage .loading-spinner span {
+  display: block;
+  width: 6.25rem;
+  height: 6.25rem;
+  border: 0.3125rem solid #3a3a3a;
+  border-top-color: #871B1F;
+  border-radius: 50%;
+  animation: spin 1s ease-in-out infinite;
 }
-#mainPage .loading-container .loading-rotate img {
+#mainPage .loading-spinner img {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 3.9375rem;
+  width: 3.75rem;
 }
-#mainPage .loading-container .loading-title {
+#mainPage .loading-title {
+  flex: 100%;
   font-size: 1.125rem;
   line-height: 1.5;
   text-align: center;
   margin-top: 0.5rem;
 }
 @media (max-width: 1280px) {
-  #mainPage .loading-container .loading-title {
+  #mainPage .loading-title {
     font-size: 0.9375rem;
     line-height: 1.3;
   }
@@ -1108,10 +1108,10 @@ body {
 }
 @keyframes spin {
   0% {
-    transform: rotate(0deg);
+    transform: rotate(45deg);
   }
   100% {
-    transform: rotate(360deg);
+    transform: rotate(405deg);
   }
 }
 #mainPage #app {
