--- a/pre/scss/components/_loading.scss
+++ b/pre/scss/components/_loading.scss
@@ -5,47 +5,45 @@
     bottom: 0;
     background-color: rgba(black, .8);
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     z-index: 8;
 
     &-container {
-        .loading-rotate {
-            position: relative;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 
-            .rotate {
-                background-image: url(../img/loading-bg.svg);
-                background-position: center;
-                background-repeat: no-repeat;
-                background-size: 100%;
-                width: size(105);
-                height: size(105);
+    &-spinner {
+        position: relative;
 
-                svg {
-                    fill: color(primary);
-                    animation: spin 1s infinite ease-in-out;
-                }
-
-            }
-
-            img {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                width: calc(size(105)*.6);
-            }
+        span {
+            display: block;
+            width: size(100);
+            height: size(100);
+            border: size(5) solid color(gray-8);
+            border-top-color: color(primary);
+            border-radius: 50%;
+            animation: spin 1s ease-in-out infinite;
         }
 
-        .loading-title {
-            @include body-1;
-            text-align: center;
-            margin-top: size(8);
+        img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: calc(size(100)*.6);
         }
     }
+
+    &-title {
+        flex: 100%;
+        @include body-1;
+        text-align: center;
+        margin-top: size(8);
+    }
+
 
     &.full {
         position: fixed;
@@ -56,13 +54,12 @@
     }
 }
 
-
 @keyframes spin {
     0% {
-        transform: rotate(0deg);
+        transform: rotate(45deg);
     }
 
     100% {
-        transform: rotate(360deg)
+        transform: rotate(405deg);
     }
 }
