--- a/pre/scss/components/_toast.scss
+++ b/pre/scss/components/_toast.scss
@@ -1,40 +1,63 @@
-.toast {
-    display: none;
+.toast-container {
     z-index: 9;
     position: fixed;
-    top: size(150);
+    top: size(144);
     left: 50%;
     @include capital;
-    color: color(primary-2);
-    align-items: center;
-    gap: size(8);
-    padding: size(8) size(16);
-    border-radius: size(8);
-    background-color: rgba(color(primary), .5);
 
-    &::before {
-        font-family: 'icomoon';
-        content: '\e918';
-    }
+    .toast {
+        display: none;
+        color: white;
+        align-items: center;
+        justify-content: center;
+        gap: size(8);
+        padding: size(8) size(16);
+        border-radius: size(8);
+        margin-top: size(8);
+        border: size(1) solid rgba(white, .2);
+        box-shadow: 0 0 size(4) rgba(color(primary-4), .4);
 
-    &.active {
-        display: flex;
-        animation: toast-show .5s forwards;
-    }
-
-    @keyframes toast-show {
-        0% {
-            transform: translate(-50%, size(20));
+        &::before {
+            font-family: 'icomoon';
         }
 
-        100% {
-            transform: translate(-50%, 0);
+        &.warning {
+            background-color: rgba(color(primary), .8);
+
+            &::before {
+                content: '\e918';
+            }
+        }
+
+        &.success {
+            background-color: rgba(color(success), .8);
+
+            &::before {
+                content: '\e91a';
+            }
+        }
+
+        &.active {
+            display: table;
+            animation: toast-show .5s forwards;
+        }
+
+        @keyframes toast-show {
+            0% {
+                opacity: 0;
+                transform: translate(-50%, size(-20));
+            }
+
+            100% {
+                opacity: 1;
+                transform: translate(-50%, 0);
+            }
         }
     }
 
 
     // smallpad ~ 768
     @include max-to(small-pad) {
-        top: size(44);
+        top: size(36);
     }
 }
