--- a/pre/scss/pages/_game-play.scss
+++ b/pre/scss/pages/_game-play.scss
@@ -186,6 +186,11 @@
             background: linear-gradient(to bottom, rgba(black, 0) 0%, rgba(black, .8) 100%);
             z-index: 1;
         }
+
+        .toast-container {
+            position: absolute;
+            top: size(16);
+        }
     }
 
     &.play {
